# nf-scanner-api

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-build-test.yml  python-execute-tests.yml
src/nf_scanner_api/: __init__.py  app.py
src/nf_scanner_api/models/: __init__.py  document.py  nfse.py
src/nf_scanner_api/routes/: __init__.py  document.py  health.py
src/nf_scanner_api/schemas/: __init__.py  document.py  health.py
src/nf_scanner_api/services/: __init__.py  document_service.py
